AsyncConnection: avoid is_connected require connection's lock

Fixes: http://tracker.ceph.com/issues/15440
Signed-off-by: Haomai Wang <haomai@xsky.com>